--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fs-extra": "^11.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.9.0",
     "vite": "^2.8.6"
   },
   "devDependencies": {
