--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postcss": "^8.4.12",
     "prettier": "2.6.0",
     "prisma": "^4.13.0",
+    "styled-components": "^5.3.10",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2"
   },
